--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -20,7 +20,7 @@
         <script src="js/angular-router.js"></script>
         <script src="js/app.js"></script>
         <script src="js/home.js"></script>
-        <script src="js/app/admin_add_User.js"></script>
+        <script src="js/app/add_User.js"></script>
         <script src="js/app/admin_add_groupemail.js"></script>
         <script src="js/app/admin_add_information.js"></script>
         <script src="js/app/advise.js"></script>
@@ -28,12 +28,10 @@
         <script src="js/app/behavior.js"></script>
         <script src="js/app/course.js"></script>
         <script src="js/app/course_add.js"></script>
-        <script src="js/app/course_subject.js"></script>
         <script src="js/app/course_subject_1.js"></script>
         <script src="js/app/course_subject_2.js"></script>
         <script src="js/app/course_subject_3.js"></script>
         <script src="js/app/course_subject_4.js"></script>
-        <script src="js/app/course_subject_5.js"></script>
         <script src="js/app/parent.js"></script>
         <script src="js/app/student.js"></script>
         <script src="js/app/teacher.js"></script>
@@ -70,7 +68,7 @@
                     <div class="col-sm-3 col-md-2 sidebar">
                         <div class="btn-group-vertical">
                             <a href="#/home" class="btn btn-primary">Home</a>
-                            <a href="#/admin_add_User" class="btn btn-primary">Admin</a>
+                            <a href="#/admin_add_information" class="btn btn-primary">ผู้ดูแลระบบ</a>
                             <a href="#/teacher" class="btn btn-primary">อาจารย์</a>
                             <a href="#/student" class="btn btn-primary">นักศึกษา</a>
                             <a href="#/parent" class="btn btn-primary">ผู้ปกครอง</a>
@@ -78,6 +76,7 @@
                             <a href="#/behavior" class="btn btn-primary">ข้อมูลความประพฤติ</a>
                             <a href="#/appointment" class="btn btn-primary">ข้อมูลการนัดหมาย</a>
                             <a href="#/course" class="btn btn-primary">หลักสูตรสาขา</a>
+                            <a href="#/course_subject_show" class="btn btn-primary">แผนการเรียน</a>
                             <a href="#/timetable" class="btn btn-primary">ตารางเรียน/สอน</a>
                         </div>
                     </div>
