--- a/src/main/webapp/timetable_show.html
+++ b/src/main/webapp/timetable_show.html
@@ -1,5 +1,7 @@
 
+
 <div class="col-md-10">
+    <br>
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">ตารางเรียน/ตารางสอน</h3>
@@ -116,12 +118,13 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-success btn-lg"><a href="#/timetableAdd"><font color="black">edit/update</font></a></button>
+
             </div> 
+            <button type="button" class="btn btn-success btn-lg">
+                <a href="#/timetableAdd"><font color="black">update</font></a>
+            </button>
         </div>
-    </div> 
-</div>
+    </div>
 
 
-
-
+</div> 
