--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -5,7 +5,8 @@
 <script src="calendar/jquery-ui-timepicker-addon.js"></script>
 <script src="calendar/jquery-ui-sliderAccess.js"></script>
 
-<div class="col-md-10" ng-app="advise" ng-controller="adviseController">
+<div class="col-md-10">
+    
     <div id="myTabContent" class="tab-content">
         <div class="list-group">
             <div class="list-group-item">
