--- a/src/main/webapp/course_add.html
+++ b/src/main/webapp/course_add.html
@@ -1,7 +1,25 @@
+<br>
+<div class="col-md-10">
+    <ul class="nav nav-pills">
+        <li><a href="#/admin_add_information">เพิ่มข่าวประชาสัมพันธ์</a></li>  
+        <li class="active"><a href="#/courseAdd">เพิ่มวิชาในหลักสูตร</a></li>
+        <li><a href="#/course_subject_1">เพิ่มแผนการเรียน</a></li>
+        <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">
+                User <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="#/user">เพิ่มผู้ใช้งานระบบ</a></li>
+                <li><a href="#/user_show">ข้อมูลผู้ใช้งานระบบ</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
 
 <div class="col-md-10">
-    
-    <div class="panel panel-primary">
+    <br>
+    <br>   
+    <div class="panel panel-success">
         <div class="panel-heading">
             <h3 class="panel-title">เพิ่มวิชาลงในหลักสูตรสาขาเทคโนโลยีคอมพิวเตอร์</h3>
         </div>
@@ -13,7 +31,7 @@
                         <select class="form-control" ng-model="select.categoryCourse" ng-options="co.categoryCourseName for co in coursecategoryshow.content" ng-change="selectCategoryGroup()"></select>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-hide="selectFreedom">
                     <label for="text" class="col-lg-2 control-label">กลุ่มวิชา</label>
                     <div class="col-lg-10">
                         <select class="form-control" ng-model="select.categoryGroupCourse" ng-options="groupCourse.name for groupCourse in categoryGroup"></select>
