--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -6,7 +6,7 @@
 <script src="calendar/jquery-ui-sliderAccess.js"></script>
 
 <div class="col-md-10">
-    
+
     <div id="myTabContent" class="tab-content">
         <div class="list-group">
             <div class="list-group-item">
@@ -16,12 +16,6 @@
                     <form class="form-horizontal">
                         <fieldset>
                             <div class="form-group">
-                                <label for="text" class="col-lg-2 control-label">ลำดับ</label>
-                                <div class="col-lg-10">
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
                                 <div class="col-lg-10">
                                     <input type="text" class="form-control" ng-model="advise.idSubject">
@@ -29,15 +23,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
-                                <div class="col-lg-10">
-                                    <script type="text/javascript">
-                                                        $(function () {
-                                                            $("#dateInputAd").datepicker({
-                                                                dateFormat: 'dd-M-yy'
-                                                            });
-                                                        });
-                                    </script>
-                                    <input type="text" class="form-control" name="dateInputAd" id="dateInputAd" value="" ng-model="advise.date">
+                                <div class="col-lg-10" style="z-index: 1000">
+<!--                                    <script type="text/javascript">
+                                                $(function () {
+                                                    $("#dateInputAd").datepicker({
+                                                        dateFormat: 'dd-M-yy'
+                                                    });
+                                                });
+                                    </script>-->
+                                    <input type="text" style="z-index: 2000" class="form-control" name="dateInputAd" id="dateInputAd" value="" ng-model="advise.date">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -50,6 +44,14 @@
                                 <label for="text" class="col-lg-2 control-label">รายละเอียดการให้คำปรึกษา</label>
                                 <div class="col-lg-10">
                                     <input type="text" class="form-control" ng-model="advise.detail">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="text" class="col-lg-2 control-label">หมวด</label>
+                                <div class="col-lg-10">
+                                    <select class="form-control" ng-model="advise.categoryAdvise" ng-options="cat.nameCategory for cat in advisecateshow.content">
+
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -67,7 +69,7 @@
                             </div>
                             <div class="form-group">
                                 <center>
-                                    <button class="btn btn-success" ng-click="saveAd()">Save</button>
+                                    <button class="btn btn-success" ng-click="saveAdvise()">Save</button>
                                     <a href="#/advise"><button class="btn btn-danger">Cancle</button></a>
                                 </center>
                             </div>
