--- a/src/main/webapp/admin_add_information.html
+++ b/src/main/webapp/admin_add_information.html
@@ -24,7 +24,7 @@
 <br>
 <br>
 
-<div class="col-md-10" ng-app="admin_add_information" ng-controller="admin_add_informationController">
+<div class="col-md-10">
     <br>
     <br>
     <div class="panel panel-success">
@@ -43,7 +43,6 @@
                                 });
                     </script>
                     <input class="form-control" type="text" name="dateInputStart" id="dateInputStart" value="" ng-model="information.startTime">
-                    <!--<input type="text" class="form-control" ng-model="information.startTime">-->
                 </div>
             </div>
             <div class="form-group">
