--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -20,7 +20,7 @@
         <script src="js/angular-router.js"></script>
         <script src="js/app.js"></script>
         <script src="js/home.js"></script>
-        <script src="js/app/add_User.js"></script>
+        <script src="js/app/add_user.js"></script>
         <script src="js/app/admin_add_groupemail.js"></script>
         <script src="js/app/admin_add_information.js"></script>
         <script src="js/app/advise.js"></script>
