--- a/src/main/webapp/admin_user_show.html
+++ b/src/main/webapp/admin_user_show.html
@@ -6,11 +6,14 @@
         <li><a href="#/course_subject_1">เพิ่มแผนการเรียน</a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown">
-                User <span class="caret"></span>
+                ผู้ใช้งานระบบ <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#/admin_add_user">เพิ่มผู้ใช้งานระบบ</a></li>
+                <li><a href="#/admin_add_user">เพิ่มอาจารย์</a></li>
+                <li><a href="#/admin_add_user">เพิ่มนักศึกษา</a></li>
+                <li><a href="#/admin_add_user">เพิ่มผู้ปกครอง</a></li>
                 <li  class="active"><a href="#/user_show">ข้อมูลผู้ใช้งานระบบ</a></li>
+                
             </ul>
         </li>
     </ul>
