--- a/src/main/webapp/course_subject_4.html
+++ b/src/main/webapp/course_subject_4.html
@@ -6,11 +6,13 @@
         <li class="active"><a href="#/course_subject_4">เพิ่มแผนการเรียน</a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown">
-                User <span class="caret"></span>
+                ผู้ใช้งานระบบ <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#/user">เพิ่มผู้ใช้งานระบบ</a></li>
-                <li><a href="#/user_show">ข้อมูลผู้ใช้งานระบบ</a></li>
+                <li><a href="#/teacher">เพิ่มอาจารย์</a></li>
+                <li><a href="#/student">เพิ่มนักศึกษา</a></li>
+                <li ><a href="#/parent">เพิ่มผู้ปกครอง</a></li>
+                <li><a href="#/user_show">ข้อมูลผู้ใช้งานระบบ</a></li>               
             </ul>
         </li>
     </ul>
