--- a/src/main/webapp/admin_add_parent.html
+++ b/src/main/webapp/admin_add_parent.html
@@ -35,14 +35,14 @@
                                 <div class="icon-preview">
                                     <label class="col-md-3 control-label "> ชื่อผู้ใช้งาน :</label>
                                     <div class="col-md-2">
-                                        <input type="username" class="form-control" placeholder="Enter Name"ng-model="user.name">
+                                        <input type="username" class="form-control" placeholder="Enter Name"ng-model="parent.name">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> รหัสผ่าน :</label>
                                 <div class="col-md-2">
-                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter PassWord"ng-model="user.password">
+                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter PassWord"ng-model="parent.password">
                                 </div>
                             </div>
                             <div class="form-group"> <i id="confirm" class=""></i>
@@ -55,13 +55,13 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อีเมล์ :</label>
                                 <div class="col-md-2">
-                                    <input type="email" class="form-control" placeholder="Enter Email"ng-model="user.email">
+                                    <input type="email" class="form-control" placeholder="Enter Email"ng-model="parent.email">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> สถานะการใช้งาน :</label>
                                 <div class="col-md-2">
-                                    <select type="status" class="form-control" ng-model="user.status">
+                                    <select type="status" class="form-control" ng-model="parent.status">
                                         <option value="Admin">Admin</option>
                                         <option value="Teacher">Teacher</option>
                                         <option value="Student">Student</option>
@@ -74,7 +74,7 @@
                                 <label class="col-md-2 control-label"></label>
                                 <div class="col-md-3">
 
-                                    <input value="Save" type="submit" class="btn btn-success"   ng-click="saveUser()">
+                                    <input value="Save" type="submit" class="btn btn-success"   ng-click="saveParent()">
                                     <input value="Clear" type="submit" class="btn btn-info" ng-click="clearUser()">
                                 </div>
                             </div>
