edit file html and java

--- a/src/main/webapp/admin_add_information.html
+++ b/src/main/webapp/admin_add_information.html
@@ -58,7 +58,6 @@
                                 });
                     </script>
                     <input class="form-control" type="text" name="dateInput" id="dateInput" value="" ng-model="information.endTime">
-                    <!--<input class="form-control" type="text" name="dateInput" id="dateInput" value="" ng-model="information.endTime">-->
                 </div>
             </div>
             <div class="form-group">
@@ -69,13 +68,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง(ไทย)</label>
+                <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
                 <div class="col-lg-10">
                     <input type="text" class="form-control" ng-model="information.title">
                 </div>
             </div>
             <div class="form-group">
-                <label for="text" class="col-lg-2 control-label">เนื้อหาย่อ(ไทย)</label>
+                <label for="text" class="col-lg-2 control-label">เนื้อหาย่อ</label>
                 <div class="col-lg-10">
                     <input type="text" class="form-control" ng-model="information.pageBrief">
                 </div>
@@ -107,23 +106,33 @@
         <div class="panel-body">
             <table class="table table-striped table-hover ">
                 <thead>
-                    <tr>
-                        <th>ลำดับ</th>
+                    <tr>    
                         <th>วันที่ลงข่าว</th>
                         <th>ชื่อเรื่อง</th>
+                        <th>file</th>
                         <th>เนื้อหาย่อ</th>
+                        <th>รายละเอียด</th>
+                        <th>link web</th>
+                        <th>Edit</th>
                         <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="infor in informationshow.content">
-                        <th>{{infor.id}}</th>
+                    <tr ng-repeat="infor in informationshow.content">                      
                         <th>{{infor.startTime}}</th>
                         <th>{{infor.title}}</th>
-                        <th>{{infor.pageBrief}}</th>
+                        <th>{{infor.file}}</th>
+                         <th>{{infor.pageBrief}}</th>
+                        <th>{{infor.description}}</th>
+                        <th>{{infor.linkWeb}}</th>
+                        <th>
+                            <button class="btn" ng-click="delInformation(infor)">
+                                <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                            </button>
+                        </th>
                         <th>
                             <button class="btn" ng-click="deleteInformation(infor)">
-                                <span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+                                <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
                             </button>
                         </th>
                     </tr>
