--- a/src/main/webapp/course_show.html
+++ b/src/main/webapp/course_show.html
@@ -22,14 +22,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseSocial">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -44,14 +44,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseLanguage">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -66,15 +66,15 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseMath">
                                     {{}}
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%"{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -89,14 +89,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseActivity">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -124,14 +124,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseBasic">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -146,14 +146,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseForce">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -168,14 +168,14 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td>รหัสวิชา</td>
-                                    <td>รายวิชา</td>
-                                    <td>หน่วยกิต</td>
+                                    <td width="20%">รหัสวิชา</td>
+                                    <td width="40%">รายวิชา</td>
+                                    <td width="40%">หน่วยกิต</td>
                                 </tr>
                                 <tr ng-repeat="course in courseFreedome">
-                                    <td>{{course.subjectCode}}</td>
-                                    <td>{{course.subjectName}}</td>
-                                    <td>{{course.credit}}</td>
+                                    <td width="20%">{{course.subjectCode}}</td>
+                                    <td width="40%">{{course.subjectName}}</td>
+                                    <td width="40%">{{course.credit}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -184,10 +184,6 @@
 
             </div>
         </div>
-
-
-
-
 
 
         <div class="panel panel-primary">
