--- a/src/main/webapp/course_subject_4.html
+++ b/src/main/webapp/course_subject_4.html
@@ -64,23 +64,24 @@
             </form>
         </div>
     </div>
-</div>
 
-<table class="table table-striped table-hover ">
-    <thead>
-        <tr>
-            <th>รหัสวิชา</th>
-            <th>รายวิชา</th>
-            <th>หน่วยกิต</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="course in courseSubjectClassFourshow.content">             
-            <td>{{course.subjectCode}}</td>
-            <td>{{course.subjectName}}</td>
-            <td>{{course.credit}}</td>
-            <td><td><i class="mdi-action-delete" ng-click="delCourseSubjectClassFour()"></i></td></td>
-        </tr>
-    </tbody>
-</table>
+
+    <table class="table table-striped table-hover ">
+        <thead>
+            <tr>
+                <th>รหัสวิชา</th>
+                <th>รายวิชา</th>
+                <th>หน่วยกิต</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="course in courseSubjectClassFourshow.content">             
+                <td>{{course.subjectCode}}</td>
+                <td>{{course.subjectName}}</td>
+                <td>{{course.credit}}</td>
+                <td><span class="mdi-action-delete" ng-click="deleteClassFour(course)"> </span></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
