--- a/src/main/webapp/course_add.html
+++ b/src/main/webapp/course_add.html
@@ -69,3 +69,283 @@
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+<div class="col-md-10" ng-app="course_add" ng-controller="course_addController">  
+
+    <div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดศึกษาทั่วไป หน่วยกิตต่ำสุด : 32</h3>
+            </div>
+            <div class="panel-body">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาสังคมศาสตร์และมนุษย์ศาสตร์ หน่วยกิตต่ำสุด : 6</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseSocial">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาภาษา หน่วยกิตต่ำสุด : 12</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseLanguage">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาวิทยาศาสตร์และคณิตศาสตร์ หน่วยกิตต่ำสุด : 12</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseMath">
+                                    {{}}
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาพลศึกษาหรือนันทนาการหรือกิจกรรม หน่วยกิตต่ำสุด : 2</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseActivity">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดวิชาเฉพาะ หน่วยกิตต่ำสุด : 103</h3>
+            </div>
+            <div class="panel-body">
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพพื้นฐาน หน่วยกิตต่ำสุด : 37</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseBasic">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพบังคับ หน่วยกิตต่ำสุด : 49</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseForce">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพเลือก หน่วยกิตต่ำสุด : 17</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                    <td>แก้ไข</td>
+                                    <td>ลบ</td>
+                                </tr>
+                                <tr ng-repeat="course in courseFreedome">
+                                    <td>{{course.subjectCode}}</td>
+                                    <td>{{course.subjectName}}</td>
+                                    <td>{{course.credit}}</td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn" ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดวิชาเลือกเสรี หน่วยกิตต่ำสุด : 6</h3>
+            </div>
+
+        </div>
+
+    </div>
+</div>
