--- a/src/main/webapp/course_subject_2.html
+++ b/src/main/webapp/course_subject_2.html
@@ -63,7 +63,7 @@
             </form>
         </div>
     </div>
-</div>
+
 
 <table class="table table-striped table-hover ">
     <thead>
@@ -79,12 +79,12 @@
             <td>{{course.subjectCode}}</td>
             <td>{{course.subjectName}}</td>
             <td>{{course.credit}}</td>
-            <td><td><i class="mdi-action-delete" ng-click="delCourseSubjectClassTwo()"></i></td></td>
+             <td><span class="mdi-action-delete" ng-click="deleteClassTwo(course)"> </span></td>
         </tr>
     </tbody>
 </table>
 
-
+</div>
 
 
 
